--- a/TimeSheetApp/MainWindow.xaml
+++ b/TimeSheetApp/MainWindow.xaml
@@ -265,11 +265,11 @@
                             <Label Content="Support" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center"/>
                             <lebedevcontrols1:MultiValuesSelector Height="40" ItemsSource="{Binding Supports}" SelectedItems="{Binding SupportsChoiceCollection}" DisplayMember="Name" DisplayTipMember="Name" AllSelectButton="True" AllowMultiSelect="True"/>
                             <Label Content="Клиентские пути" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center"/>
-                            <lebedevcontrols1:MultiValuesSelector Height="40" ItemsSource="{Binding ClientWays}" LastSelectedItem="{Binding NewRecord.ClientWays}" AllowMultiSelect="False" DisplayMember="ShortName" DisplayTipMember="Name" AllSelectButton="False"/>
+                            <lebedevcontrols1:MultiValuesSelector Height="40" ItemsSource="{Binding ClientWays}" LastSelectedItem="{Binding NewRecord.ClientWays, Mode=TwoWay}" AllowMultiSelect="False" DisplayMember="ShortName" DisplayTipMember="Name" AllSelectButton="False"/>
                             <Label Content="Эскалация" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center"/>
                             <lebedevcontrols1:MultiValuesSelector Height="40"  ItemsSource="{Binding Escalations}" SelectedItems="{Binding EscalationsChoiceCollection}" DisplayMember="Name" DisplayTipMember="Name" AllSelectButton="True" AllowMultiSelect="True"/>
                             <Label Content="Формат" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center"/>
-                            <lebedevcontrols1:MultiValuesSelector Height="40" ItemsSource="{Binding Formats}" LastSelectedItem="{Binding NewRecord.Formats}" AllowMultiSelect="False" DisplayMember="Name" DisplayTipMember="Name" AllSelectButton="False"/>
+                            <lebedevcontrols1:MultiValuesSelector Height="40" ItemsSource="{Binding Formats}" LastSelectedItem="{Binding NewRecord.Formats, Mode=TwoWay}" AllowMultiSelect="False" DisplayMember="Name" DisplayTipMember="Name" AllSelectButton="False"/>
                             <Label Content="Риск" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center"/>
                             <lebedevcontrols1:MultiValuesSelector Height="40" ItemsSource="{Binding Risks}" SelectedItems="{Binding RiskChoiceCollection}" DisplayMember="RiskName" DisplayTipMember="RiskName" AllSelectButton="True" AllowMultiSelect="True"/>
                             <Button Name="Add" Height="35" Margin="0,10,0,0" 
